# Graduation_project

./: .gitignore  .gitmodules  calibration_camera.py  camera_params_20260406_155142.npz  check_camera_params.py  readme.md  system_start.sh  system_stop.sh  test_aruco_standalone.py
final_captures/: charger_2.npy  charger_3.npy  metadata_000_20260307_165707.json  metadata_000_20260310_162551.json  metadata_000_20260403_142448.json  metadata_000_20260403_144302.json  metadata_000_20260403_160251.json  pointcloud_final.npy
install/: local_setup.sh  setup.sh
install/aruco_detector/share/aruco_detector/: package.sh  package.xml
install/aruco_detector/share/aruco_detector/launch/: aruco_detector.launch.py  full_system.launch.py
log/: latest_build
src/aruco_detector/: camera_calibration.yaml  setup.py
src/aruco_detector/aruco_detector/: aruco_detector_node(备份).txt
src/aruco_detector/launch/: aruco_detection.launch.py  full_system.launch（复件）.py  full_system.launch（复件）（复件）.py
src/aruco_detector/scripts/: camera_calibration.py
src/pointcloud_refinement/: bin_to_npy.py  charger.las  check.pointcloud.py  cloudchange.sh  las_to_npy.py  setup.cfg  setup.py
src/pointcloud_refinement/launch/: pointcloud_refinement.launch.py
src/pointcloud_refinement/models/: charger.npy  desk.npy  segment_charger.npy
src/pointcloud_refinement/pointcloud_refinement/: charger_success.npy  pointcloud_check.py  pointcloud_controller_node.py  refinement_node.py
src/ranger_controller/: setup.cfg  setup.py
src/ranger_controller/launch/: check_battery_node.launch.py  system_start.sh  (+1 more)
(+55 files in other folders)
